[tool.ruff]

select = [
    "C4",
    "E",
    "F",
    "PERF",
    "RUF015",
]

ignore = [
    "C408",
    "E501",
    "PERF2",
    "PERF4",
]

[tool.poetry]
name = "ssmim"
version = "0.0.0"
description = "SSM for image density estimation"
authors = ["Justin Chiu <chiu.justin.t@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
pandas = "*"
numpy = "*"
pyparsing = "*"
tqdm = "*"
tiktoken = "*"
openai = "*"
tenacity = "*"
scipy = "*"
pytest = "*"

torch = "*"
transformers = "*"
tokenizers = ">=0.13.3"
datasets = "*"
causal-conv1d = "*"
mamba-ssm = "*"

colorful = "*"
tyro = "*"
einops = "*"

wandb = "*"
lightning = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
